--- a/src/main/resources/preprocessing.md.template
+++ b/src/main/resources/preprocessing.md.template
@@ -1,30 +1,15 @@
 
-## Input data, quality analysis and reads preprocessing: $prefix$
+## Input data analysis: $prefix$
 
 Here we describe raw reads that were received from the sequencing provider $sequencing_provider$ on $data_reception_date$ as well as the following analysis:
 
 - quality analysis of the raw reads
+$if(preprocessed)$
 - reads preprocessing 
 - quality analysis of the processed reads
+$endif$
 
-### Input data: raw reads
-
-Input file names: 
-
-$for(input_file)$
-- `$input_file$`
-$endfor$
-
-
-- data received on: $data_reception_date$
-- sequencing provider: $sequencing_provider$
-- sequencing technology: $sequencing_technology$
-- reads type: $reads_type$
-- total number of reads: $total_number_reads$
-- total number of bases: $total_number_bases$
-
-
-## Quality analysis of input sequencing data
+#### Quality analysis of input sequencing data
 
 The quality analysis of the raw reads was done with [**Prinseq**](#prinseq-refs).
 
@@ -32,7 +17,8 @@ Results of the quality analysis are provided independently for each sample in a 
 
 A detailed explanation of the content of each field of the quality analysis can be found in the [prinseq manual](http://prinseq.sourceforge.net/manual.html#QC)
 
-## Reads preprocessing
+$if(preprocessed)$
+### Reads preprocessing
 
 The preprocessing of the reads was done with the tool Prinseq as follows:
 
@@ -42,9 +28,64 @@ The preprocessing of the reads was done with the tool Prinseq as follows:
 
 The processed reads of each sample are provided independently in `tar.gz` files.
 
-## Quality analysis of processed reads
+### Quality analysis of processed reads
 
 The quality of the processed reads was also analyzed using Prinseq. As with the quality analysis of the raw reads, the quality analysis of each sample is provided in independent `tar.gz` files.
+$endif$
+
+### $prefix$: input data description
+
+- data received on: $data_reception_date$
+- sequencing provider: $sequencing_provider$
+- sequencing technology: $sequencing_technology$
+- reads type: $reads_type$
+- input file/s: $input-files$
+- total number of reads: $total_number_reads$
+- total number of bases: $total_number_bases$
+
+### $prefix$: quality analysis
+
+#### quality scores
+
+$if(pairedend)$
+
+##### global quality distribution - forward reads
+
+![number of reads per mean quality score - forward reads]($prefix$/$prefix$.$prinseq_prefix$_qd3.png)
+
+##### global quality distribution - reverse reads
+
+![number of reads per mean quality score - reverse reads]($prefix$/$prefix$.$prinseq_prefix$_qd3-2.png)
+
+$else$
+
+##### global quality distribution
+
+![number of reads per mean quality score]($prefix$/$prefix$.$prinseq_prefix$_qd3.png)
+
+$endif$
+
+$if(pairedend)$
+
+##### quality scores per read position (%) - forward reads
+
+![quality scores per read position - forward reads]($prefix$/$prefix$.$prinseq_prefix$_qd.png)
+
+##### quality scores per read position (%) - reverse reads
+
+![quality scores per read position - reverse reads]($prefix$/$prefix$.$prinseq_prefix$_qd-2.png)
+
+$else$
+
+##### quality scores per read position (%)
+
+![quality scores per read position]($prefix$/$prefix$.$prinseq_prefix$_qd.png)
+
+$endif$
+
+##### 
+
+##### 
 
 ### References {#prinseq-refs}
 
