template works, test with pdf output

--- a/src/main/resources/preprocessing.md.template
+++ b/src/main/resources/preprocessing.md.template
@@ -39,44 +39,42 @@ $endif$
 - sequencing provider: $sequencing_provider$
 - sequencing technology: $sequencing_technology$
 - reads type: $reads_type$
-- total number of reads: $total_number_reads$
-- total number of bases: $total_number_bases$
+- total number of reads: 
+
+  - `$filename_1$`: $total_number_reads_1$
+  - `$filename_2$`: $total_number_reads_2$
+
+- total number of bases:
+
+  - `$filename_1$`: $total_number_bases_1$
+  - `$filename_2$`: $total_number_bases_2$
 
 ### $prefix$: quality analysis
 
-#### quality scores
+The following graphics display the distribution of quality scores across the sample.
+
+\pagebreak
 
 $if(paired_end)$
 
-##### global quality distribution - forward reads
+![$prefix$: number of reads per mean quality score - forward reads]($prefix$.raw.prinseq-qa_qd3.png)
 
-![number of reads per mean quality score - forward reads]($prefix$/$prefix$.prinseq-qa_qd3.png)
+![$prefix$: number of reads per mean quality score - reverse reads]($prefix$.raw.prinseq-qa_qd3-2.png)
 
-##### global quality distribution - reverse reads
+\pagebreak
 
-![number of reads per mean quality score - reverse reads]($prefix$/$prefix$.prinseq-qa_qd3-2.png)
+![$prefix$: quality scores per read position - forward reads]($prefix$.raw.prinseq-qa_qd.png)
 
-##### quality scores per read position (%) - forward reads
+![$prefix$: quality scores per read position - reverse reads]($prefix$.raw.prinseq-qa_qd-2.png)
 
-![quality scores per read position - forward reads]($prefix$/$prefix$.prinseq-qa_qd.png)
-
-##### quality scores per read position (%) - reverse reads
-
-![quality scores per read position - reverse reads]($prefix$/$prefix$.prinseq-qa_qd-2.png)
+\pagebreak
 
 $else$
 
-##### global quality distribution
+![$prefix$: number of reads per mean quality score]($prefix$.raw.prinseq-qa_qd3.png)
 
-![number of reads per mean quality score]($prefix$/$prefix$.prinseq-qa_qd3.png)
+![$prefix$: quality scores per read position]($prefix$.raw.prinseq-qa_qd.png)
 
-##### quality scores per read position (%)
-
-![quality scores per read position]($prefix$/$prefix$.prinseq-qa_qd.png)
+\pagebreak
 
 $endif$
-
-
-### References {#prinseq-refs}
-
-- _Schmieder R and Edwards R_: Quality control and preprocessing of metagenomic datasets. _Bioinformatics_ 2011, 27:863-864. [PMID: 21278185](http://www.ncbi.nlm.nih.gov/pubmed/21278185)
